# TraceOps

./: .gitignore  .pypirc.template  CHANGELOG.md  README.md  pyproject.toml  traceops_demo.ipynb
.github/actions/agent-replay/: action.yml
.github/workflows/: ci.yml
docs/: index.html
examples/: langchain_chat.py  langgraph_react.py  openai_basic.py  pytest_usage.py
src/trace_ops/: __init__.py  _types.py  assertions.py  cassette.py  cli.py  diff.py  normalize.py  pytest_plugin.py  recorder.py  replayer.py  streaming.py
src/trace_ops/analysis/: __init__.py  gap_analyzer.py  pattern_detector.py  skills_generator.py
src/trace_ops/eval/: __init__.py  assertions.py  judge.py  rubrics.py
src/trace_ops/export/: __init__.py  finetune.py
src/trace_ops/github/: __init__.py  pr_fetcher.py
src/trace_ops/interceptors/: __init__.py  crewai.py  langchain.py  langgraph.py
src/trace_ops/mcp/: __init__.py  diff.py  events.py  interceptor.py
src/trace_ops/rag/: __init__.py  assertions.py  context_analysis.py  diff.py  export.py  recorder.py  scorers.py  snapshot.py
src/trace_ops/rag/interceptors/: __init__.py  chromadb_interceptor.py  embedding_interceptor.py  langchain_retriever.py  llamaindex_retriever.py  pinecone_interceptor.py  qdrant_interceptor.py
src/trace_ops/reporters/: __init__.py  cost_dashboard.py  html.py  terminal.py
src/trace_ops/semantic/: __init__.py  assertions.py  similarity.py
tests/: conftest.py  test_analysis.py  test_assertions.py  test_assertions_extended.py  test_auto_record.py  test_cassette.py  test_cli_deep.py  test_cli_extended.py  test_cost_dashboard.py  test_crewai_interceptor.py  test_diff.py  test_diff_extended.py  test_eval.py  test_export_finetune.py  test_github.py  test_integration_anthropic.py  test_integration_langchain.py  test_integration_langgraph.py  test_integration_openai.py  test_mcp.py  test_normalize.py  test_normalize_extended.py  test_pytest_plugin.py  test_rag_assertions.py  test_rag_diff.py  test_rag_export.py  test_rag_recording.py  test_rag_snapshot.py  test_recorder.py  test_recorder_extended.py  test_recorder_patching.py  test_replayer.py  test_replayer_extended.py  test_replayer_patching.py  test_reporters_html.py  test_reporters_html_extended.py  test_reporters_terminal.py  test_reporters_terminal_render.py  test_semantic.py  test_streaming.py  (+2 more)
